# agenterprise-documentation

./: README.md  pyproject.toml
agenterprise-doc/: mkdocs.yml
agenterprise-doc/docs/: index.md
agenterprise-doc/docs/dsl/: ai-functional-layer.md  architecture-layer.md  data-layer.md  index.md  infrastruture-layer.md  service-layer.md
agenterprise-doc/docs/generator/: index.md
agenterprise-doc/docs/installation/: index.md
agenterprise-doc/site/dsl/: index.html
agenterprise-doc/site/dsl/ai-functional-layer/: index.html
agenterprise-doc/site/dsl/architecture-layer/: index.html
agenterprise-doc/site/dsl/service-layer/: index.html
agenterprise-doc/site/search/: search_index.json
artwork/: generate_logo.py
docs/: 404.html  CNAME  index.html  sitemap.xml
docs/assets/javascripts/: bundle.f55a23d4.min.js
docs/dsl/: index.html
docs/dsl/ai-functional-layer/: index.html
docs/dsl/architecture-layer/: index.html
docs/dsl/data-layer/: index.html
docs/dsl/infrastruture-layer/: index.html
docs/dsl/service-layer/: index.html
docs/generator/: index.html
docs/installation/: index.html
docs/search/: search_index.json
docs/stylesheet/: extra.css
