[project]
name = "agenterprise-documentation"
version = "0.1.0"
description = "Documentation for Agenterprise, the AI way to model driven software development."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.20",
    "mkdocs-terminal>=4.7.0",
    "svgwrite>=1.4.3",
]
